# Hello_Qt_Opencv

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  ico.rc  icon.qrc  main.cpp
